syntax = "proto3";
package com.alimin.fk.pb;

import "FkSize.proto";
import "FkRational.proto";
import "FkIntVec3.proto";
import "FkFloatVec3.proto";
import "FkPaintPath.proto";

message FkImageLayer {
//    reserved 2, 15, 9 to 11;
//    reserved "foo", "bar";
    FkSize size = 1;
    FkRational rotation = 2;
    FkFloatVec3 scale = 3;
    FkIntVec3 trans = 4;
    string file = 5;
    int32 id = 6;
    int32 color = 7;
    repeated FkPaintPath paths = 8;
}