syntax = "proto3";
package com.alimin.fk.pb;

message FkIntVec3 {
    int32 x = 1;
    int32 y = 2;
    int32 z = 3;
}