syntax = "proto3";
package fk_pb;

message FkSize {
    int32 width = 1;
    int32 height = 2;
}